Fix: remove bug that added whitespace to right side of page.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .App {
     background-color: #ADACB5;
     min-height: 120vh;
@@ -6,6 +15,7 @@
     padding-top: 60px;
     font-family: 'Montserrat', sans-serif;
     color: #2D3142;
+    width: 100vw;
 }
 
 i {
